Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-2896
$exists does not heed $not modifier in some embedded field cases
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.9.0
Affects Version/s:
None
Component/s:
None
Labels:
None
Field Tab
Aha! Info
Operating System:
ALL
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Aaron Staple (Inactive)
Reporter:
Aaron Staple (Inactive)
Participants:
Aaron Staple
,
auto
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
Apr 04 2011 09:18:22 PM UTC
Updated:
Jul 12 2016 12:18:15 AM UTC
Resolved:
Apr 06 2011 01:26:52 AM UTC
PagerDuty