SERVER-2896 check isNot when handling exists and missing field